--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,21 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="<%= new_user_path %>">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%= new_session_path %>">Login</a>
-          </li>
           <%if current_user %>
-            <li class="nav-item">
-              <a class="nav-link" <%= link_to "Log Out", session_path(current_user), method: :delete %></a>
+              <li class="nav-item">
+                <a class="nav-link" <%= link_to "#{current_user.name}'s Profile", user_path(current_user)%></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" <%= link_to "Log Out", session_path(current_user), method: :delete %></a>
+              </li>
+            <%else%>
+              <li class="nav-item">
+                <a class="nav-link" href="<%= new_user_path %>">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="<%= new_session_path %>">Login</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" <%= link_to "#{current_user.name} Profile", user_path(current_user)%></a>
-            </li>
-            <%end%>
+          <%end%>
         </ul>
       </div>
     </nav>
