Add bootstrap_form  gem, integrate into forms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,11 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href=" <%=root_path %>">Cocktail Book</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
           <%if current_user %>
               <li class="nav-item">
                 <a class="nav-link" <%= link_to "#{current_user.name}'s Profile", user_path(current_user)%></a>
@@ -39,4 +39,11 @@
     </nav>
     <%= yield %>
   </body>
+
+  <footer id="footer">
+
+      <p>© Copyright 2020 Cocktail Book</p>
+
+  </footer>
+
 </html>
