--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container-lg">
    <ul>
         <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -6,17 +7,14 @@
 
 
 
-<%= form_for @user do |f|%>
-    <%=f.label :email, "Email:"%>
+<%= bootstrap_form_for @user do |f|%>
     <%= f.text_field :email%> <br>
-    <%= f.label :name, "Username:"%>
     <%= f.text_field :name%><br>
-    <%=f.label :password, "Password:"%>
     <%=f.password_field :password%><br>
-    <%=f.label :password_confirmation, "Confirm Password"%>
     <%=f.password_field :password_confirmation%><br>
     <%=f.submit "Create User"%>
     <%=%>
-
-
 <%end%>
+
+<%= link_to "Signup via GitHub", "/auth/github"%>
+</div>
