--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,32 +12,33 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
       <a class="navbar-brand" href=" <%=root_path %>">Cocktail Book</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
           <%if current_user %>
               <li class="nav-item">
-                <a class="nav-link" <%= link_to "#{current_user.name}'s Profile", user_path(current_user)%></a>
+                <a class="btn btn-primary" id="account-btn"<%= link_to "Account", user_path(current_user)%> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" <%= link_to "Log Out", logout_path(current_user), method: :delete %></a>
+                <a class="btn btn-danger" id="account-btn" <%= link_to "Log Out", logout_path(current_user), method: :delete %> </a>
               </li>
-            <%else%>
-              <li class="nav-item">
-                <a class="nav-link" href="<%= new_user_path %>">Sign Up</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="<%= login_path %>">Login</a>
-            </li>
           <%end%>
         </ul>
       </div>
     </nav>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+ <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 
   <footer id="footer">
