Add nested User/favorites routes. Add favorite/edit/delte logic in view for cocktail

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -13,3 +13,10 @@ Directions: <%= @cocktail.instructions %>
     </tr>
     <% end %>
 </table>
+
+<% if @cocktail.user_id == current_user.id %>
+    <%= link_to "Edit Cocktail", edit_user_cocktail_path(@user, @cocktail)%>
+    <%= link_to "Delete Cocktail", edit_user_cocktail_path(@user, @cocktail)%>
+<% else %>
+    <%= link_to "Save to Favorites", new_user_favorite_path(@user)%>
+<% end %>
