--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
         <ul class="navbar-nav ml-auto">
           <%if current_user %>
               <li class="nav-item">
+                <a class="btn btn-primary" id="account-btn"<%= link_to "Cocktails", cocktails_path%> </a>
+              </li>
+              <li class="nav-item">
                 <a class="btn btn-primary" id="account-btn"<%= link_to "Account", user_path(current_user)%> </a>
               </li>
               <li class="nav-item">
