Add favorite new view to create action. Add favorite show action/view

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<% @cocktails.each do |c|%>
-<%= link_to c.name, user_cocktail_path(@user, c)%><br>
+<% @cocktails.each do |c| %>
+<%= link_to c.name, cocktail_path(c)%><br>
 <%end%>
 
