--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<div class="container-lg">
+
+<div class="container">
 <%= bootstrap_form_for @user do |f|%>
     <ul>
         <% @user.errors.full_messages.each do |msg| %>
