--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 
 
-<p><%= link_to "My Cocktail Recipes:", user_cocktails_path(@user) %> </p>
-<p> <%=link_to "Favorited Recipes:", user_favorites_path(@user) %> </p>
+<p><%= link_to "My Cocktail Recipes", user_cocktails_path(@user) %> </p>
+<p> <%=link_to "Favorited Recipes", user_favorites_path(@user) %> </p>
 
 <p> <%= link_to "New Cocktail", new_user_cocktail_path(@user) %> </p>
