--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,10 +1,11 @@
 html, body {
+    font-family: 'Montserrat', sans-serif;
     height: 100%;
     width: 100%;
+    margin: 0;
     background: linear-gradient(45deg, #A8E6CE, #DCEDC2 ) no-repeat center center fixed;
     animation: gradient 20s ease infinite;
     background-repeat:no-repeat;
-    font-family: 'Montserrat', sans-serif;
   }
   
   
@@ -19,7 +20,11 @@ html, body {
      background-position: 0% 50%;
    }
   }
-  
+
+  .navbar {
+    font-family: 'Montserrat', sans-serif;
+  }
+
   .container-lg {
     padding-top: 2%;
     padding-bottom: 2%;
@@ -35,6 +40,7 @@ html, body {
   }
   
   .container {
+    font-family: 'Montserrat', sans-serif;
     padding: 1% 10% 1% 10%;
     position: relative;
     text-align: center;
@@ -46,6 +52,18 @@ html, body {
     left: 0px;
     right: 0px;
   }
+
+  .footer {
+  font-family: 'Montserrat', sans-serif;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  background-color: #f5f5f5;
+  display: block;
+  text-align: center;
+}
    
   
   #user-greeting {
@@ -68,13 +86,5 @@ html, body {
   }
   
   
-  #footer {
-  position: -webkit-sticky;
-  height: 50px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  padding-top: 15px;
-  margin-bottom: 0px;
-  text-align: center;
-  }
+
+  
