--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           <div class="form-group mx-sm-3 mb-2">
               <%= text_field_tag :query%>
           </div>  
-              <%= submit_tag "Search", class: "btn btn-primary mb-2" %>
+              <%= submit_tag "Search Cocktails", class: "btn btn-primary mb-2" %>
         <% end %>
 
         <ul class="navbar-nav ml-auto">
