--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       <%if current_user %>
-        <%= form_tag search_cocktails_path, method: :post, class: "form-inline"  do %>
+        <%= form_tag search_cocktails_path, method: :post, class: "form-inline ml-auto"  do %>
           <div class="form-group mx-sm-3 mb-2">
               <%= text_field_tag :query%>
           </div>  
