--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,11 @@
 
       <%if current_user %>
         <%= form_tag search_cocktails_path, method: :post, class: "form-inline ml-auto"  do %>
-          <div class="form-group mx-sm-3 mb-2">
-              <%= text_field_tag :query%>
+          <div class="form-group mx-sm-3 mb-2 search">
+              <%= text_field_tag :query, placeholder="ingredient..", class: "form-control" %>
+              
           </div>  
-              <%= submit_tag "Search Cocktails", class: "btn btn-primary mb-2" %>
+              <%= submit_tag "Search Cocktails", class: "btn btn-primary " %>
         <% end %>
 
         <ul class="navbar-nav ml-auto">
@@ -58,6 +59,10 @@
       <span class="text-muted small mb-0">© Copyright 2020 Cocktail Book</span>
 </footer>
 
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
