Move rating_count/average_rating favorite class methods into favorites_helper module

--- a/app/views/application/hello.html.erb
+++ b/app/views/application/hello.html.erb
@@ -1,8 +1,8 @@
 <div class="masthead d-flex"> 
     <div class="container text-center my-auto">
 
-    <h1 class="mb-1">Welcome to Cocktail Book</h1><br>
-    <h3 class="mb-5">Find your new favorite drink recipe. Dont forget to add a recipe for the community!</h3>
+    <h2 class="mb-1">Cocktail Book</h2><br>
+    <h5 class="mb-5">Find your new favorite drink recipe. Dont forget to add a recipe for the community!</h5>
 
     <% if current_user%>
 
