--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Cocktails</h1>
+
  <% if flash[:alert] %>
         <div class="notice"><%= flash[:alert] %></div>
 <% end %>
@@ -17,8 +18,8 @@
             
         <tr>
             <td><%= link_to c.name, cocktail_path(c)%></td>
-            <%if Favorite.rating_count(c.id) > 0 %>
-                <td><%= Favorite.average_rating(c.id) %> / 10</td>
+            <%if rating_count(c.id) > 0 %>
+                <td><%= average_rating(c.id) %> / 10</td>
             <%else%>
                 <td>Not Rated</td>
             <%end%>
