Add highest rated cocktail option in view/highest_rated helper method

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Cocktails</h1>
-
+<%= link_to "Highest Rated", favorites_path %>
  <% if flash[:alert] %>
         <div class="notice"><%= flash[:alert] %></div>
 <% end %>
