--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,3 +1,31 @@
-<% @favorites.each do |f|%>
-    <%= f.cocktail.name %> <br>
-<% end %>
+<h1>Highest Rated Cocktails</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Average Rating</th>
+      <th scope="col">Created By</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @favorites.each do |c| %>
+           
+        <tr>
+            <td><%= link_to highest_rated_cocktails(c).name, cocktail_path(c)%></td>
+            <%if rating_count(c.id) > 0 %>
+                <td><%= average_rating(c.id) %> / 10</td>
+            <%else%>
+                <td>Not Rated</td>
+            <%end%>
+
+            <%if highest_rated_cocktails(c).user_id == current_user.id%>
+                <td>Me</td>
+            <%else%>
+                <td><%= highest_rated_cocktails(c).user.name %></td>
+            <%end%>
+        </tr>
+            
+    <%end%>
+  
+  </tbody>
+</table>
