--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,35 +1,5 @@
-<div class="container">
-    <h2><u><%= @cocktail.name %></u></h2><br>
-    <h4>Created By:</h4> <p><%= @cocktail.user.name %></p>
-    <%if rating_count(@cocktail.id) > 0%>
-       <h4> Rated:</h4> <p><%= average_rating(@cocktail.id) %> / 10 , by <%= rating_count(@cocktail.id)%> users.</p>
-    <%end%>
-    <h4>Directions:</h4> <p><%= @cocktail.instructions %></p>
+<%= render 'show'%>
 
-   
- </div>
-
- <div class="container">   
-
-    <table class="table">
-    <thead>
-        <tr>
-        <th scope="col">Quantity</th>
-        <th scope="col">Ingredient</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        <% @cocktail.cocktail_ingredients.each do |ci| %>
-            <tr>
-                <td><%= ci.quantity %></td> 
-                <td><%= ci.ingredient.name.capitalize %></td>
-            </tr>
-        <%end%>
-        
-    </tbody>
-    </table>
-</div>
 <div class="container">  
     
     <% if @cocktail.user_id == current_user.id %>
@@ -44,7 +14,7 @@
             <%= f.hidden_field :cocktail_id, value:  @cocktail.id  %>
             <%=f.select :rating, [1,2,3,3,4,5,6,7,8,9,10 ]%>
             <%=f.text_field :comments%>
-            <%=f.submit "Save"%>
+            <%=f.submit "Save", class: 'btn btn-primary'%>
         <%end%>
         
     <% end %>
