--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -26,11 +26,7 @@
             
             <%= cocktail_rating(c) %>
 
-            <%if c.user_id == current_user.id%>
-                <td>Me</td>
-            <%else%>
-                <td><%= c.user.name %></td>
-            <%end%>
+            <%= cocktail_owner(c) %>
         </tr>
             
     <%end%>
