--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -42,6 +42,13 @@ html, body {
     left: 0px;
     right: 0px;
   }
+
+  .form {
+    position: relative;
+    
+    padding-left: 15%;
+    padding-right: 15%;
+  }
   
   .container {
     font-family: 'Montserrat', sans-serif;
@@ -55,6 +62,7 @@ html, body {
     left: 0px;
     right: 0px;
   }
+
 
   .footer {
   font-family: 'Montserrat', sans-serif;
@@ -76,6 +84,9 @@ html, body {
     margin: 10px;
   }
 
+  .logo {
+    margin: 10px;
+  }
 
    
   
