--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,26 @@
 
 <div class="container">
-<%= bootstrap_form_for @user do |f|%>
-    <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-    </ul>
-    <%= f.text_field :email%> <br>
-    <%= f.text_field :name%><br>
-    <%=f.password_field :password%><br>
-    <%=f.password_field :password_confirmation%><br>
-    <%=f.submit "Create User"%>
-    <%=%>
-<%end%>
+    <div class="form">
+        <h3>Sign Up:</h3>
+        <hr><br>
+        <%= bootstrap_form_for @user do |f|%>
+            <ul>
+                <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+                <% end %>
+            </ul>
+            <%= f.text_field :email%> <br>
+            <%= f.text_field :name%><br>
+            <%=f.password_field :password%><br>
+            <%=f.password_field :password_confirmation%><br>
+            <%=f.submit "Create User", class: "btn btn-primary"%>
+            <%= link_to "Cancel", root_path, class: "btn btn-primary"%>
+            <%=%>
+        <%end%><br>
 
-<%= link_to "Signup via GitHub", "/auth/github"%>
+        <h5>Sign up with:</h5>
+        <a class="logo" href ="/auth/google_oauth2"> <img src= <%= image_path("g_icons.png") %>></a>
+        <a class="logo" href="/auth/github"><%= octicon "mark-github", height: 64 %> </a>
+
+    </div>
 </div>
