--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -4,8 +4,8 @@
     
     <% if @cocktail.user_id == current_user.id %>
         <hr>
-        <a class="btn btn-primary" <%= link_to "Edit Cocktail", edit_user_cocktail_path(current_user.id, @cocktail)%> </a>
-        <a class="btn btn-primary" <%= link_to "Delete Cocktail", edit_user_cocktail_path(current_user.id, @cocktail)%> </a>
+        <a class="btn btn-primary" <%= link_to "Edit Cocktail", edit_user_cocktail_path(current_user.id, @cocktail.id)%> </a>
+        <a class="btn btn-primary" <%= link_to "Delete Cocktail", user_cocktail_path(current_user.id, @cocktail), :method => :delete%> </a>
     <% elsif user_favorite(current_user, @cocktail) %>
         <h5>Saved to your <%=link_to "favorites.", user_favorites_path(current_user.id)%>
     <%else%>
