--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+<% if flash[:alert] %>
+        <div class="notice"><%= flash[:alert] %></div>
+<% end %>
 <div class="form">
     <h2>Account Information</h2>
     <hr><br>
