--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -24,4 +24,5 @@
             <%end%>
 
     <%= f.submit "Save Changes", class: "btn btn-primary"%>
+    <%= link_to "Cancel", user_cocktails_path(current_user), class: "btn btn-danger"%>
 <%end%>
