--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,10 +1,14 @@
 <% if current_path %>
     <h1>My Recipes</h1>
+    <%= link_to "All Cocktails", cocktails_path, class: "btn btn-primary" %>
+    <%= link_to "Create New Cocktail",new_user_cocktail_path(current_user), class: "btn btn-primary"%>
 <% else%>
     <h1>Cocktails</h1>
+    <%= link_to "Top Rated Cocktails", favorites_path, class: "btn btn-primary" %>
+    <%= link_to "Create New Cocktail",new_user_cocktail_path(current_user), class: "btn btn-primary"%>
 <% end%>
 
-<%= link_to "Highest Rated", favorites_path %>
+
  <% if flash[:alert] %>
         <div class="notice"><%= flash[:alert] %></div>
 <% end %>
