--- a/app/views/favorites/edit.html.erb
+++ b/app/views/favorites/edit.html.erb
@@ -7,4 +7,5 @@
 <%=f.select :rating, [1,2,3,3,4,5,6,7,8,9,10 ]%>
 <%=f.text_field :comments%>
 <%=f.submit "Save Changes", class: 'btn btn-primary'%>
+<%= link_to "Cancel", user_favorites_path(current_user), class: "btn btn-danger"%>
 <%end%>
