--- a/app/views/top_cocktails/index.html.erb
+++ b/app/views/top_cocktails/index.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @favorites.each do |c| %>
+    <% @top_cocktails.each do |c| %>
         <tr>
       
             <%if current_path  %>
