--- a/app/views/cocktails/_show.html.erb
+++ b/app/views/cocktails/_show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     <h2><u><%= @cocktail.name %></u></h2><br>
     <h4>Created By:</h4> <p><%= cocktail_owner(@cocktail) %></p>
-    <%if rating_count(@cocktail.id) > 0%>
-       <h4> Rated:</h4> <p><%= average_rating(@cocktail.id) %> / 10 , by <%= rating_count(@cocktail.id)%> users.</p>
+    <%if @cocktail.ratings_count > 0%>
+       <h4> Rated:</h4> <p><%= @cocktail.average_rating %> / 10 , by <%= @cocktail.ratings_count%> users.</p>
     <%end%>
     <h4>Directions:</h4> <p><%= @cocktail.instructions %></p>
 
