--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,31 +1,9 @@
 <%= render 'show'%>
 
+<h3>Edit Cocktail:</h3>
 <%= bootstrap_form_for @cocktail, url: user_cocktail_path(current_user, @cocktail) do |f|%>
-    <ul>
-        <% @cocktail.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-    </ul>
-
-
-    <%= f.text_field :name, label: "Cocktail Name"%>
-    <%= f.text_field :instructions, label: "Mixing Directions"%>
-
-    <h3> Ingredients:</h3>
-   
-        
-            <%= f.fields_for :cocktail_ingredients do |ci|%>
-                <div class="row">
-                     <div class="col">
-                         <%= ci.text_field :quantity%>
-                    </div> 
-                        <%= ci.fields_for :ingredient do |i|%>
-                            <div class="col">
-                                <%= i.text_field :name %>
-                            </div>    
-                        <%end%>
-                </div>    
-            <%end%>
+ 
+    <%= render partial: "form", locals: {cocktail: @cocktail, f: f} %>
 
     <%= f.submit "Save Changes", class: "btn btn-primary"%>
     <%= link_to "Cancel", user_cocktails_path(current_user), class: "btn btn-danger"%>
