--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,29 +3,8 @@
         <h1>Create a New Cocktail</h1>
 
         <%= bootstrap_form_for @cocktail do |f|%>
-            <%if @cocktail.errors.any?%>
-                <ul>
-                    <% @cocktail.errors.full_messages.each do |msg| %>
-                    <li><%= msg %></li>
-                    <% end %>
-                </ul>
-            <%end%>
-            <%= f.text_field :name, label: "Cocktail Name"%>
-            <%= f.text_field :instructions, label: "Mixing Directions"%>
-            <h3> Ingredients:</h3>
-                
-                    <%= f.fields_for :cocktail_ingredients do |ci|%>
-                        <div class="row">
-                            <div class="col">
-                                <%= ci.text_field :quantity %>
-                            </div> 
-                                <%= ci.fields_for :ingredient do |i|%>
-                                    <div class="col">
-                                        <%= i.text_field :name %>
-                                    </div>    
-                                <%end%>
-                        </div>    
-                    <%end%>
+            <%= render partial: "form", locals: {cocktail: @cocktail, f: f} %>
+            
             <%= f.submit "Create Cocktail", class: "btn btn-primary"%>
             <%= link_to "Cancel", user_path(current_user), class: "btn btn-danger"%>
         <%end%>
